# itop-ai-assistant

./: .dockerignore  .gitignore  CLAUDE.md  README.md
assistant/: .dockerignore  .env.test.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  config.yaml  main.py  pyproject.toml  pytest.toml  ruff.toml
assistant/prompts/enrichment/: classify_ask_system.md  classify_service_system.md  classify_subcategory_human.md  classify_subcategory_system.md  enrich_system.md  evaluate_human.md  evaluate_system.md
assistant/src/: agent.py  catalog_repository.py  config.py  config_store.py  deps.py  itop_provisioning.py  journal.py  main.py  prompt_store.py  prompts.py  router.py  text_utils.py  ticket_repository.py  webhook.py
assistant/src/admin/: router.py  setup.py
assistant/src/domain/: catalog.py  ticket.py
assistant/src/itop/: client.py  models.py  repository.py  utils.py
assistant/src/itop_client/: __init__.py  itop.py  parallel.py  schema.py
assistant/src/itoptop/: __init__.py  datamodel.py  exceptions.py  itop.py  schema.py
assistant/src/pipelines/: registry.py
assistant/src/state/: ticket_state.py
assistant/src/vector/: chunker.py  db.py  embedder.py  index.py  indexer.py  models.py  reindex.py  router.py  source.py
assistant/src/vector_sources/: registry.py  tickets.py
assistant/src/webhook/: handler.py  models.py  router.py
assistant/test/integration/: conftest.py  test_enrichment_graph.py
assistant/test/pg/: conftest.py  test_db_smoke.py  test_indexer_pg.py  test_vector_index.py
assistant/test/unit/: test_admin_api.py  (+29 more)
(+55 files in other folders)
