[project]
name = "itop-ai-assistant"
version = "0.1.0"
description = "iTop AI Assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "langchain-core>=1.2.23",
    "langchain-openai>=0.3.0",
    "langgraph>=1.1.6",
    "lxml>=5.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings[yaml]>=2.13.1",
    "pyyaml>=6.0.3",
    "redis>=7.4.0",
    "uvicorn>=0.43.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.0.0",
    "lxml-stubs>=0.5.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "types-pyyaml>=6.0.12.20250915",
]
